# wishcribe

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_wishcribe.py
wishcribe/: __init__.py  audio.py  cli.py  core.py  deps.py  diarize.py  download.py  merge.py  models.py  output.py  transcribe.py  utils.py
