[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "wishcribe"
version         = "1.1.0"
description     = "Fast multi-speaker audio/video transcription — faster-whisper + pyannote.audio"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"
keywords        = [
    "wishcribe", "whisper", "faster-whisper",
    "transcription", "diarization", "speaker",
    "audio", "video", "offline", "batch", "subtitle", "srt",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "moviepy>=1.0.3",
    "torch>=2.0.0",
    "pyannote.audio>=3.1.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
# Legacy openai-whisper backend (slower, CPU-friendly, no CTranslate2 needed)
legacy = ["openai-whisper>=20231117"]
# OpenAI cloud API transcription (no local GPU needed)
api    = ["openai>=1.0.0"]
dev    = ["pytest>=7.0"]

[project.scripts]
wishcribe = "wishcribe.cli:main"

[project.urls]
Homepage  = "https://github.com/dwicak/wishcribe"
Repository = "https://github.com/dwicak/wishcribe"
Issues    = "https://github.com/dwicak/wishcribe/issues"
Changelog = "https://github.com/dwicak/wishcribe/releases"

[tool.setuptools.packages.find]
where   = ["."]
include = ["wishcribe*"]
