[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "wishcribe"
version         = "1.4.1"
authors 	= [
    {name = "Darmawan Wicaksono", email = "wishcribe@gmail.com"}
]
description     = "Fast multi-speaker audio/video transcription — faster-whisper + pyannote.audio"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"
keywords        = [
    "wishcribe", "whisper", "faster-whisper", "mlx-whisper",
    "transcription", "diarization", "speaker",
    "audio", "video", "offline", "batch", "subtitle", "srt",
    "apple-silicon", "mlx",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "moviepy>=2.0.0",
    "torch>=2.0.0",
    "pyannote.audio>=3.1.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
# Apple Silicon: MLX-Whisper uses Neural Engine / GPU via Apple's MLX framework.
# soundfile is used by --fast-mode VAD chunk packing to read audio arrays.
apple  = ["mlx-whisper>=0.4.0", "soundfile>=0.12.0"]
# Legacy openai-whisper backend (slower, CPU-friendly, no CTranslate2 needed)
legacy = ["openai-whisper>=20231117"]
# OpenAI cloud API transcription (no local GPU needed)
api    = ["openai>=1.0.0"]
dev    = ["pytest>=7.0"]

[project.scripts]
wishcribe = "wishcribe.cli:main"

[project.urls]
Homepage   = "https://github.com/dwicak/wishcribe"
Repository = "https://github.com/dwicak/wishcribe"
Issues     = "https://github.com/dwicak/wishcribe/issues"
Changelog  = "https://github.com/dwicak/wishcribe/releases"

[tool.setuptools.packages.find]
where   = ["."]
include = ["wishcribe*"]
